--- a/.gitignore
+++ b/.gitignore
@@ -75,9 +75,9 @@ README.md
 ### PyCharm Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-# *.iml
-# modules.xml
-# .idea/misc.xml
+*.iml
+.idea/modules.xml
+.idea/misc.xml
 # *.ipr
 
 # Sonarlint plugin
@@ -91,7 +91,6 @@ __pycache__/
 
 # C extensions
 *.so
-
 # Distribution / packaging
 .Python
 build/
